Support 'const' syntax.